syntax = "proto3";

import "io/anemos/protobeam/examples/basic.proto";
import "io/anemos/annotations.proto";

option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

package io.anemos.protobeam.examples;

message ProtoBeamOptionMessage {
    string test_name = 1;
    int32 test_index = 2;
    string option_deprecated = 3 [deprecated = true];
    string option_description = 4 [(io.anemos.field_meta) = {
        description: "A very detailed description"
    }];


}